--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -1,10 +1,15 @@
-pipeline {
-    agent any
-    stages {
-        stage('Build') { 
-            steps {
-                sh 'npm install' 
-            }
+node {
+    def commit_id
+
+    stage('Preperation') {
+        checkout scm
+        sh "git rev-parse --short HEAD > .git/commit-id"
+        commit_id = readFile('.git/commit-id').trim()
+    }
+    stage('test') {
+        nodejs(nodeJSInstallationName: 'nodejs') {
+            sh 'npm install --only=dev'
+            sh 'npm test'
         }
     }
 }
